k8s/mysql-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: mysql
  labels:
    app: accounts
spec:
  selector:
    matchLabels:
      app: accounts
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: accounts
        tier: mysql
    spec:
      containers:
        - image: mysql:5.7
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          args: ["--character-set-server=utf8mb4","--default-time-zone=+08:00","--ignore-db-dir=lost+found"]
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
