k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  ports:
    - port: 80
  selector:
    app: api
    tier: backend
  type: LoadBalancer
