k8s/elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  ports:
    - port: 9200
  selector:
    app: elasticsearch
    tier: logging
  type: ClusterIP
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  selector:
    matchLabels:
      app: elasticsearch
      tier: logging
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: elasticsearch
        tier: logging
    spec:
      containers:
        - image: docker.elastic.co/elasticsearch/elasticsearch:7.10.2
          name: elasticsearch
          ports:
            - containerPort: 9200
