k8s/kibana.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  ports:
    - port: 5601
  selector:
    app: kibana
    tier: logging
  type: NodePort
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  selector:
    matchLabels:
      app: kibana
      tier: logging
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kibana
        tier: logging
    spec:
      containers:
        - image: kibana:7.10.1
          name: kibana
          ports:
            - containerPort: 5601
              name: api
