k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: accounts
spec:
  ports:
    - port: 3306
  selector:
    app: accounts
    tier: mysql
  clusterIP: None
